stylesheets/forms.css
/* Mixins
---------------------------------------- */
/* this hack is courtesy of gbbowers on github
   https://gist.github.com/601810 */
/* Variables
---------------------------------------- */
/*thoughtbot red*/
/*line-hieght of all the type on the site*/
/*one grid column*/
/*size of one gutter*/
/* Clear Floated Elements
------------------------------------------------------------------------------*/
.clearfix:after, .primary:after, #design-portfolio:after, .secondary:after, form.wufoo ul li.name:after, form.wufoo ul li#fo8li31:after {
  clear: both;
  content: ' ';
  display: block;
  font-size: 0;
  line-height: 0;
  visibility: hidden;
  width: 0;
  height: 0; }

/* basic site styles
---------------------------------------- */
body {
  background-color: #FCFCFC;
  /*background: url('/images/grid.png') 10px -4px;*/
  border-top: 4px solid #ad141e;
  color: #2B2B2B;
  font: 14px "skolar-1", "skolar-2", Georgia, serif;
  text-align: center; }

.wrapper, .primary, #design-portfolio, .secondary {
  margin: 0 auto;
  text-align: left;
  width: 995px; }

h1, h2, h3, h4, h5, h5, h6 {
  font-family: "museo-sans-1", "museo-sans-2", "Helvetica Neue", Helvetica, sans-serif;
  text-rendering: optimizeLegibility; }

h1 {
  color: #2b2b2b;
  font-size: 60px;
  font-weight: 900;
  margin-bottom: 20px; }

h2 {
  color: #2b2b2b;
  font-size: 36px;
  font-weight: 200;
  line-height: 40px;
  margin-bottom: 40px; }

h3 {
  font-weight: 500;
  line-height: 20px;
  margin-bottom: 20px; }

h4 {
  line-height: 20px;
  margin: 0; }

p {
  color: #555;
  line-height: 20px;
  margin-bottom: 20px; }

ul {
  list-style-position: outside;
  margin-bottom: 20px; }
  ul li {
    line-height: 20px; }

img {
  display: block;
  vertical-align: bottom; }

blockquote {
  background: url("/images/quote.png") no-repeat;
  border: 0;
  font: 200 18px "museo-sans-1", "museo-sans-2", "Helvetica Neue", Helvetica, sans-serif;
  margin: 0 25px 0 0;
  padding-left: 25px; }
  blockquote p {
    line-height: 30px; }
  blockquote p.author {
    color: #bbb;
    font: italic 14px "skolar-1", "skolar-2", Georgia, serif;
    line-height: 20px;
    margin: 0; }

a:link, a:active {
  color: #ad141e;
  text-decoration: none; }
a:visited {
  color: #96111a; }
a:hover {
  color: #db1926;
  text-decoration: none; }

.button, form.wufoo ul li input#saveForm {
  background: #ad141e;
  border: 1px solid #52090e;
  color: #fff;
  display: block;
  line-height: 20px;
  padding: 30px;
  font: 700 24px "museo-sans-1", "museo-sans-2", "Helvetica Neue", Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
  text-shadow: 0 -1px 0 #7f0f16;
  -moz-box-shadow: inset 0 1px 0 #e93e49;
  -webkit-box-shadow: inset 0 1px 0 #e93e49;
  -o-box-shadow: inset 0 1px 0 #e93e49;
  box-shadow: inset 0 1px 0 #e93e49;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-radius: 3px;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  transition: all 0.3s; }
  .button:hover, form.wufoo ul li input#saveForm:hover {
    background: #c41722;
    border: 1px solid #7f0f16;
    text-shadow: 0 -1px 0 #96111a;
    -moz-box-shadow: inset 0 1px 0 #ee6c74;
    -webkit-box-shadow: inset 0 1px 0 #ee6c74;
    -o-box-shadow: inset 0 1px 0 #ee6c74;
    box-shadow: inset 0 1px 0 #ee6c74; }
  .button:active, form.wufoo ul li input#saveForm:active {
    background: #96111a;
    text-shadow: none;
    -moz-box-shadow: inset 0 -1px 3px #680c12;
    -webkit-box-shadow: inset 0 -1px 3px #680c12;
    -o-box-shadow: inset 0 -1px 3px #680c12;
    box-shadow: inset 0 -1px 3px #680c12; }

.external {
  padding-right: 13px; }
  .external:hover {
    background: url("/images/external.png") right 6px no-repeat; }

img {
  margin-bottom: 0; }

#page-header {
  background: url("/images/shadowing.png") center top no-repeat;
  padding-top: 60px;
  text-align: center; }
  #page-header h1 {
    line-height: 60px; }
  #page-header h2 {
    color: #736B6C;
    font: normal 14px "skolar-1", "skolar-2", Georgia, serif;
    line-height: 20px;
    margin-bottom: 0; }

.secondary-header {
  /*  border-top: 1px solid #dcdcdc;
    margin-top: $lh*3;*/
  padding-top: 60px; }

.secondary-wrapper {
  background: rgba(228, 228, 228, 0.7) url("/images/shadowing.png") center 0 no-repeat;
  border-top: 1px solid #DCDCDC;
  border-bottom: 1px solid #DCDCDC;
  padding: 39px 0 39px; }

/* Selection styles
---------------------------------------- */
::selection {
  background: #ad141e;
  color: #000; }

::-moz-selection {
  background: #ad141e;
  color: #000; }

::-webkit-selection {
  background: #ad141e;
  color: #000; }

/* Design page
---------------------------------------- */
#design-portfolio ul {
  list-style: none; }
  #design-portfolio ul li {
    padding: 20px 0;
    border-bottom: 1px solid #ddd;
    text-align: center;
    width: 830px;
    margin: 0 auto; }
    #design-portfolio ul li img {
      -moz-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
      -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
      -o-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
      box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1); }
    #design-portfolio ul li:last-child {
      border-bottom: 0; }

/* Forms
---------------------------------------- */
form.wufoo {
  margin-left: 0; }
  form.wufoo header#header {
    display: none; }
  form.wufoo ul {
    list-style: none;
    margin-top: 20px; }
    form.wufoo ul li {
      margin-bottom: 20px;
      width: 485px;
      padding: 0;
      /*inputs for project planning form*/
      /*margin on the first header on the planning form*/ }
      form.wufoo ul li h3 {
        color: #ad141e;
        margin-top: 40px; }
      form.wufoo ul li fieldset {
        background: none;
        border: 0;
        padding: 0; }
      form.wufoo ul li label.desc, form.wufoo ul li legend.desc, form.wufoo ul li label, form.wufoo ul li legend {
        font: 14px "skolar-1", "skolar-2", Georgia, serif;
        line-height: 20px;
        margin: 0 0 10px; }
        form.wufoo ul li label.desc.choice, form.wufoo ul li legend.desc.choice, form.wufoo ul li label.choice, form.wufoo ul li legend.choice {
          display: inline; }
      form.wufoo ul li .req {
        color: #ad141e; }
      form.wufoo ul li input.checkbox, form.wufoo ul li input.radio {
        display: inline-block; }
      form.wufoo ul li input[type="text"], form.wufoo ul li input[type="email"], form.wufoo ul li input.text, form.wufoo ul li textarea {
        border: 1px solid #999;
        font: 14px "skolar-1", "skolar-2", Georgia, serif;
        line-height: 20px;
        margin: 0;
        max-width: 463px;
        /*6 columns minus line-heigh for the padding and 2px for the border*/
        min-width: 463px;
        /*6 columns minus line-heigh for the padding and 2px for the border*/
        padding: 9px 10px;
        /*line-height divided by two so that the bottom and top will align to the baseline grid*/
        width: 463px;
        /*6 columns minus line-heigh for the padding and 2px for the border*/
        -moz-box-shadow: inset 0 1px 2px #aaaaaa;
        -webkit-box-shadow: inset 0 1px 2px #aaaaaa;
        -o-box-shadow: inset 0 1px 2px #aaaaaa;
        box-shadow: inset 0 1px 2px #aaaaaa; }
        form.wufoo ul li input[type="text"]:focus, form.wufoo ul li input[type="email"]:focus, form.wufoo ul li input.text:focus, form.wufoo ul li textarea:focus {
          outline-color: #ad141e; }
      form.wufoo ul li input#saveForm {
        display: block;
        margin: 0;
        padding: 8px 40px;
        /*line-height divided by two so that the bottom and top will align to the baseline grid*/ }
        form.wufoo ul li input#saveForm:hover {
          cursor: pointer; }
        form.wufoo ul li input#saveForm:active {
          background: #96111a; }
      form.wufoo ul li .instruct {
        color: #aaa;
        font-size: 14px;
        font-style: italic;
        font-weight: normal;
        margin: 20px 0 40px; }
      form.wufoo ul li.focused {
        background: none; }
        form.wufoo ul li.focused label {
          color: #000; }
      form.wufoo ul li.name, form.wufoo ul li#fo8li31 {
        float: none;
        width: 510px; }
        form.wufoo ul li.name span, form.wufoo ul li#fo8li31 span {
          display: block;
          float: left;
          margin-right: 25px;
          width: 230px; }
          form.wufoo ul li.name span:nth-child(odd), form.wufoo ul li#fo8li31 span:nth-child(odd) {
            margin-right: 0; }
          form.wufoo ul li.name span.req, form.wufoo ul li#fo8li31 span.req {
            display: inline;
            float: none;
            margin: 0;
            width: auto; }
          form.wufoo ul li.name span label, form.wufoo ul li#fo8li31 span label {
            color: #aaa;
            font-size: 14px;
            font-style: italic;
            font-weight: normal; }
          form.wufoo ul li.name span input[type="text"], form.wufoo ul li#fo8li31 span input[type="text"] {
            max-width: 208px;
            /*3 columns minus line-heigh for the padding and 2px for the border*/
            min-width: 208px;
            /*3 columns minus line-heigh for the padding and 2px for the border*/
            width: 208px;
            /*3 columns minus line-heigh for the padding and 2px for the border*/ }
      form.wufoo ul li#fo7li3 {
        clear: both;
        width: 655px; }
      form.wufoo ul li#fo5li136 div {
        margin-left: 10px;
        padding-top: 20px; }
        form.wufoo ul li#fo5li136 div span {
          color: #666;
          margin-right: 10px; }
      form.wufoo ul li#fo5li12 div, form.wufoo ul li#fo5li123 div {
        display: block;
        margin-left: 30px;
        padding-top: 20px; }
        form.wufoo ul li#fo5li12 div span, form.wufoo ul li#fo5li123 div span {
          color: #666;
          display: block;
          margin-bottom: 10px; }
          form.wufoo ul li#fo5li12 div span input, form.wufoo ul li#fo5li123 div span input {
            margin: -2px 3px 0 -20px;
            top: 0; }
          form.wufoo ul li#fo5li12 div span.req, form.wufoo ul li#fo5li123 div span.req {
            display: inline; }
      form.wufoo ul li#fo5li130 h3#title130 {
        margin-top: 0; }

